<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/choose_location"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/locationTitle"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/cinemaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationSpinner"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/choose_cinema"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cinemaSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/cinemaTitle"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/enterSeatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cinemaSpinner"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:text="@string/enter_seat_number"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/seatNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/enterSeatTitle"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:textColor="@android:color/black"
            android:inputType="number"/>

        <TextView
            android:id="@+id/bookText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seatNumber"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center"
            android:paddingLeft="48dp"
            android:paddingTop="16dp"
            android:paddingRight="48dp"
            android:paddingBottom="16dp"
            android:text="@string/book"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>